# paneview

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  install.sh
.github/workflows/: ci.yml  release.yml
docs/: demo.html
scripts/: package-release.sh
src/: app.rs  cli.rs  input.rs  layout.rs  main.rs  pane.rs  system.rs  tui.rs
src/tui/: accessory.rs  dashboard.rs  fmt.rs  keyboard.rs  mod.rs  panes.rs  sidebar.rs  status.rs  theme.rs  widgets.rs
